feat(*): add custom service URL + refactor in service configuration object